--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
+    "json": "^9.0.6",
     "mysql2": "^1.4.2",
+    "node": "^8.3.0",
     "path": "^0.12.7",
     "sequelize": "^4.13.17"
   },
