--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
+    "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
     "path": "^0.12.7",
-    "sequelize": "^4.13.17"
+    "sequelize": "^4.14.0"
   },
   "devDependencies": {},
   "scripts": {
