--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "mysql2": "^1.4.2",
     "node": "^8.3.0",
     "path": "^0.12.7",
-    "sequelize": "^4.14.0",
+    "sequelize": "^4.15.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node server.js"
   },
   "repository": {
